--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<style src="{{ site.baseurl }}/css/index.css"></style>
 <title>{{ page.title }}</title>
 </head>
 <body>
