--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/index.css" />
+	<style src="{{ site.baseurl }}/css/index.css"></style>
 <title>{{ page.title }}</title>
 </head>
 <body>
