--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+	<link href="{{ site.baseurl }}/css/index.css"/>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<style src="{{ site.baseurl }}/css/index.css"></style>
 <title>{{ page.title }}</title>
 </head>
 <body>
