--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="{{ site.baseurl }}/css/index.css"/>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/index.css" type="text/css" />
 <title>{{ page.title }}</title>
 </head>
 <body>
