new commit try to use include

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-
-	<link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css" type="text/css" />
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css" type="text/css" />
 <title>{{ page.title }}</title>
 </head>
 <body>
 {{ content }}
+{% include test.html%}
 </body>
 </html>
