--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,13 @@
 <head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-	<link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css" type="text/css" />
+		<link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css" type="text/css" />
+		<script type="text/javascript" src="{{site.baseurl}}/js/"></script>
+		<script type="text/javascript">
+			
+		
+		
+		</script>
 <title>{{ page.title }}</title>
 </head>
 <body>
